# dotfiles

./: .Xresources  .bash_profile  .bash_profile.laptop  .bashrc  .bashrc_extra.chromebook  .bashrc_extra.laptop  .bashrc_extra_chromebook  .bashrc_extra_empty  .bashrc_extra_laptop  .bashrc_extra_pc  .gitignore  .globalgitignore  .luarc.json  .nvim.lua  .pam_environment  .tmux.conf  .vimrc  .xinitrc  .xinitrc.laptop  .xinitrc.thinkpad  .zprofile.hackerman  .zprofile.laptop  .zprofile.mail  .zprofile.nox  .zprofile.pc  .zprofile.thinkpad  .zshrc  .zshrc_extra.hackerman  .zshrc_extra.laptop  .zshrc_extra.mail  .zshrc_extra.nox  .zshrc_extra.pc  .zshrc_extra.pi  .zshrc_extra.thinkpad  arch_package_install.sh  archlinux_x86_64_packages  archlinux_x86_64_packages.hackerman  archlinux_x86_64_packages.nox  archlinux_x86_64_packages.pc  aur-packages.txt  (+31 more)
.config/: Trolltech.conf  gtkrc  gtkrc-2.0  kdeglobals  mimeapps.list  pam-gnupg
.emacs.d/: .emacs.desktop  config.el  config.org  config.org~  custom.el  custom.el~  history  init.el  init.el~  recentf
.gamedev/: .nvim.lua  deploy.sh  post-commit
.gnupg/: gpg-agent.conf
.pi/: APPEND_SYSTEM.md
.ssh/: config.hackerman  config.pc
button/: laptop-screen-brightness-u  laptop-startup-multiptap.sh
dwm/: dstatus.sh  dstatus_1second.sh  dwmshell  monitor-setup.sh  neovim-server-runner.py  poll_battery.pt  poll_battery.py  startup.sh
firefox/: user.js  userChrome.css  vdh-settings.json  zip_extension.sh
game/: battlenet.sh
helper_scripts/: arch_package_install.sh  custom_bin_scripts.sh  download_suckless.sh  firefox.sh  firefox_user.sh  firefox_user_prefs.sh  fontconfig.sh  install_system_configs.sh  makesymlinks.sh  user.js
images/: arch-dingo.jpg.bak
lemonbar/: bar.sh  main.py
media/: sources.txt
meme/: vegan_navy_seals
nextcloud/: docker-compose.yml
org/: #config.org#  #index.org#  .#config.org  config.el  config.org  config.org~  index.org  index.org~
penrose/: startup.sh
pi/: .gitignore  APPEND_SYSTEM.md  mcp.json  models-store.json  settings.json
rust/: install.sh
rust/dirsort/: Cargo.toml
rust/dirsort/src/: main.rs
rust/herald/: Cargo.toml
rust/herald/src/: main.rs
rust/qz/: Cargo.toml
rust/qz/src/: main.rs
rust/text_handler/: Cargo.toml
rust/text_handler/src/: main.rs
scripts/: .torrent_done  Huion610ProTablet.sh  _daemon_alacritty  _docker_diun_updater  _git_reminder.sh  _keyboard_added.sh  _mpc_toggle  _mpc_volume  _newsboat_watch_youtube_mpv  _pactl_volume  _pass_clear_clip  _rg_fzf.sh  _rust-analyzer-url_handler  _rust_compile_check  _tmux_copy  _tsp_download_video_helper  _usb_mount.sh  (+150 more)
(+320 files in other folders)
