[package]
name = "dirsort"
version = "0.1.0"
edition = "2021"
authors = ["Maxwell Odri <maxwellodri@gmail.com>"]
description = "A tool for grouping similar files based on filename similarity"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
strsim = "0.11"
walkdir = "2.4"
colored = "3.0"
indicatif = "0.18"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
