[package]
name = "herald"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indexmap = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["clock"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "process"] }
directories = "6"
