[package]
name = "qz"
version = "0.1.0"
edition = "2021"
authors = ["Maxwell Odri <maxwellodri@gmail.com>"]
description = "Unified project switcher and tmux session manager"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
anyhow = "1"
shellexpand = "3"
regex = "1"
dirs = "6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
