[package]
name = "text_handler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
indexmap = { version = "2.10.0", features = ["serde"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
